# arena-buddy

./: .gitignore  LICENSE  README.md  arena_buddy.spec  pyproject.toml  requirements-dev.txt
.hermes/plans/: 2026-05-28_131600-arena-buddy-implementation.md
scripts/: batch_download_icons.py  build.py  capture_tour.py  seed_all_champions.py  seed_tour_champs.py
src/arena_buddy/: __init__.py  config.py  main.py
src/arena_buddy/assets/: __init__.py  icons.py
src/arena_buddy/core/: __init__.py  game_state.py  league_detector.py  match_capture.py  match_capture_service.py  orchestrator.py  riot_api.py
src/arena_buddy/db/: aggregate_stats.py  connection.py  importer.py  personal_stats.py  queries.py  schema.py  seed.py
src/arena_buddy/scraper/: __init__.py  browser_scraper.py  lolalytics.py  name_matcher.py  qwik_scraper.py
src/arena_buddy/web/: app.py  routes.py  server.py  websocket.py
src/arena_buddy/web/static/: index.html
src/arena_buddy/web/static/css/: style.css
src/arena_buddy/web/static/js/: app.js
tests/: conftest.py
tests/integration/: test_desktop.py  test_full_app.py
tests/unit/: test_aggregate_stats.py  test_api.py  test_config.py  test_data_import.py  test_db_connection.py  test_db_schema.py  test_game_state.py  test_icons.py  test_league_detector.py  test_match_capture.py  test_orchestrator.py  test_personal_stats.py  test_project.py  test_queries.py  test_riot_api.py  test_scraper.py  test_seed.py  test_seed_import.py  test_websocket.py
tools/: screenshots.py  screenshots_weasy.py
